Docker file added Read me file added. EER Diagram added Postman Collection updated.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,16 @@ version: '3'
 services:
 
   #PHP Service
-  app:
+  ngs_app:
     build:
       context: .
       dockerfile: Dockerfile
     image: digitalocean.com/php
-    container_name: app
+    container_name: ngs_app
     restart: unless-stopped
     tty: true
     environment:
-      SERVICE_NAME: app
+      SERVICE_NAME: ngs_app
       SERVICE_TAGS: dev
     working_dir: /var/www
     volumes:
@@ -21,9 +21,9 @@ services:
       - app-network
 
   #Nginx Service
-  webserver:
+  ngs_ws:
     image: nginx:alpine
-    container_name: webserver
+    container_name: ngs_ws
     restart: unless-stopped
     tty: true
     ports:
@@ -36,9 +36,9 @@ services:
       - app-network
 
   #MySQL Service
-  db:
+  ngs_db:
     image: mysql:5.7.22
-    container_name: db
+    container_name: ngs_db
     restart: unless-stopped
     tty: true
     ports:
